<resources>
    <string name="app_name">OrderFormArbuz</string>
    <string name="order_form">Order Form of Arbuz</string>
    <string name="clear">clear</string>
    <string name="row_of_garden_bed">Row</string>
    <string name="place_of_garden_bed">Place</string>
    <string name="garden_bed_info">Garden-bed Info</string>
    <string name="check_status">Check Status</string>
    <string name="address">Address</string>
    <string name="phone">Phone</string>
    <string name="one">1</string>
    <string name="date">Date</string>
    <string name="cut_into_slices">Option \"Cut into slices\"</string>
    <string name="confirm_order">Confirm order</string>
    <string name="total_amount">Total amount: %s ₸</string>
    <string name="customer_info">Customer Info</string>
    <string name="count_cannot_be_less_than_1">Count cannot be less than 1</string>
    <string name="count_caanot_more_than_3">Count cannot be more than 3</string>
    <string name="please_wait">Please wait…</string>
    <string name="status">Status is: %s</string>
    <string name="note">* the actual amount will be slightly different from the written amount due to the weight of arbuz</string>
    <string name="order_confirmed">Your order is confirmed</string>
    <string name="address_field_cannot_be_empty">Address field cannot be empty</string>
    <string name="phone_field_cannot_be_empty">Phone field cannot be empty</string>
    <string name="date_field_should_be_selected">Date field should be selected</string>
    <string name="row_of_garden_bed_should_be_selected">Row should be selected</string>
    <string name="place_of_garden_bed_should_be_selected">Place should be selected</string>
    <string name="phone_length_should_not_be_less_than_11_starting_with_87">Phone length should not be less than 11 starting with 87</string>
    <string name="phone_number_cannot_be_fractional">Phone number cannot be fractional</string>
</resources>