<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:background="@color/purple_500"
        app:layout_constraintTop_toTopOf="parent"
        app:menu="@menu/order_form"
        app:title="@string/order_form"
        app:titleTextColor="@color/white" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/gardenBedInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/garden_bed_info"
        android:textAppearance="@style/textStyleRegular24"
        app:layout_constraintStart_toStartOf="@id/startGuideline"
        app:layout_constraintTop_toBottomOf="@id/toolbar" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/gardenBedLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="@id/endGuideline"
        app:layout_constraintStart_toStartOf="@id/startGuideline"
        app:layout_constraintTop_toBottomOf="@id/gardenBedInfo">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/rowGardenBedTextInputLayout"
            style="@style/TextInputLayoutAppearanceBox.ExposedDropdownMenu"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginEnd="16dp"
            android:layout_weight="1"
            android:hint="@string/row_of_garden_bed">

            <androidx.appcompat.widget.AppCompatAutoCompleteTextView
                android:id="@+id/rowGardenBedTextInputAutoComplete"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:editable="false"
                android:inputType="none"
                android:textAppearance="@style/textStyleRegular16"
                android:textColor="@color/black" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/placeGardenBedTextInputLayout"
            style="@style/TextInputLayoutAppearanceBox.ExposedDropdownMenu"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:hint="@string/place_of_garden_bed">

            <androidx.appcompat.widget.AppCompatAutoCompleteTextView
                android:id="@+id/placeGardenBedTextInputAutoComplete"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:editable="false"
                android:textAppearance="@style/textStyleRegular16"
                android:textColor="@color/black" />

        </com.google.android.material.textfield.TextInputLayout>
    </androidx.appcompat.widget.LinearLayoutCompat>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/checkStatusButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/check_status"
        app:layout_constraintStart_toStartOf="@id/startGuideline"
        app:layout_constraintTop_toBottomOf="@id/gardenBedLayout" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/statusTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@style/textStyleRegular18"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="@id/checkStatusButton"
        app:layout_constraintEnd_toEndOf="@id/endGuideline"
        app:layout_constraintStart_toEndOf="@id/checkStatusButton"
        app:layout_constraintTop_toTopOf="@id/checkStatusButton"
        tools:text="Status is active" />


    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/countLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="@id/startGuideline"
        app:layout_constraintTop_toBottomOf="@id/checkStatusButton">


        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/minusButton"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:background="?attr/selectableItemBackground"
            android:scaleType="centerInside"
            app:srcCompat="@drawable/ic_minus" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/countTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginHorizontal="20dp"
            android:text="@string/one"
            android:textAppearance="@style/textStyleRegular22"
            android:textColor="@color/black" />

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/plusButton"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:background="?attr/selectableItemBackground"
            android:scaleType="centerInside"
            app:srcCompat="@drawable/ic_plus" />

    </androidx.appcompat.widget.LinearLayoutCompat>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/customerInfoTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/customer_info"
        android:textAppearance="@style/textStyleRegular24"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="@id/startGuideline"
        app:layout_constraintTop_toBottomOf="@id/countLayout" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/customerLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="@id/endGuideline"
        app:layout_constraintStart_toStartOf="@id/startGuideline"
        app:layout_constraintTop_toBottomOf="@id/customerInfoTextView">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/customerAddressTextInputLayout"
            style="@style/TextInputLayoutAppearanceBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_weight="1"
            android:hint="@string/address">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/customerAddressTextInputEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:selectAllOnFocus="true"
                android:textAppearance="@style/textStyleRegular16"
                android:textColor="@color/black" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/customerPhoneTextInputLayout"
            style="@style/TextInputLayoutAppearanceBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/phone">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/customerPhoneTextInputEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:maxLength="11"
                android:selectAllOnFocus="true"
                android:textAppearance="@style/textStyleRegular16"
                android:textColor="@color/black" />

        </com.google.android.material.textfield.TextInputLayout>
    </androidx.appcompat.widget.LinearLayoutCompat>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/chooseDateInputLayout"
        style="@style/TextInputLayoutAppearanceBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:hint="@string/date"
        app:endIconDrawable="@drawable/ic_calendar"
        app:endIconMode="custom"
        app:endIconTint="@color/colorBlackAlpha50"
        app:layout_constraintEnd_toEndOf="@+id/endGuideline"
        app:layout_constraintStart_toStartOf="@+id/startGuideline"
        app:layout_constraintTop_toBottomOf="@+id/customerLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/chooseDateTextInputEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:imeOptions="actionDone"
            android:inputType="none"
            android:textAppearance="@style/textStyleRegular16"
            android:textColor="@color/black" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/dateButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="?attr/selectableItemBackground"
        app:layout_constraintBottom_toBottomOf="@+id/chooseDateInputLayout"
        app:layout_constraintEnd_toEndOf="@+id/chooseDateInputLayout"
        app:layout_constraintStart_toStartOf="@+id/chooseDateInputLayout"
        app:layout_constraintTop_toTopOf="@+id/chooseDateInputLayout" />

    <com.google.android.material.checkbox.MaterialCheckBox
        android:id="@+id/slicesCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/cut_into_slices"
        android:textAppearance="@style/textStyleRegular16"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="@+id/startGuideline"
        app:layout_constraintTop_toBottomOf="@+id/dateButton" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/sumAmountTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/total_amount"
        android:textAppearance="@style/textStyleRegular24"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="@id/startGuideline"
        app:layout_constraintTop_toBottomOf="@id/slicesCheckBox" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/noteTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/note"
        android:textAppearance="@style/textStyleRegular14"
        android:textColor="@color/colorGrayTextDisabled"
        app:layout_constraintEnd_toEndOf="@id/endGuideline"
        app:layout_constraintStart_toStartOf="@id/startGuideline"
        app:layout_constraintTop_toBottomOf="@id/sumAmountTextView" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/confirm_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:text="@string/confirm_order"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/endGuideline"
        app:layout_constraintStart_toStartOf="@id/startGuideline" />

    <kz.ablazim.orderformarbuz.ui.ProgressStateView
        android:id="@+id/progressStateView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:translationZ="100dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:text="@string/please_wait" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/startGuideline"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="12dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/endGuideline"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintGuide_end="12dp" />
</androidx.constraintlayout.widget.ConstraintLayout>